# finish-it

./: .gitignore  Cargo.toml  README.md  fitdb
.github/workflows/: ci.yml  release.yml
sql/: schema.sql
src/: add.rs  db.rs  main.rs  render.rs
